--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yjs",
+  "name": "rdyjs",
   "version": "13.6.24",
   "description": "Shared Editing Library",
   "main": "./dist/yjs.cjs",
