--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build React App
         run: |
           npm install
-          npm run build
+          npm run dist
         env:
           CI: false
       - uses: JS-DevTools/npm-publish@v2
