--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rdyjs",
-  "version": "13.6.25",
+  "version": "13.6.26",
   "description": "Shared Editing Library",
-  "main": "./dist/yjs.cjs",
+  //"main": "./dist/yjs.cjs",
   "module": "./dist/yjs.mjs",
   "types": "./dist/src/index.d.ts",
   "type": "module",
